grammar.js
    module: ($) =>
      seq(
        optional($.package),
        repeat(choice($.import, $.using)),
        repeat(choice($._type_decl, $._expr_statement)),
      ),

    //////////////////////////////////////////////////////////////////////////

    _expr_statement: ($) => seq($._Expr, optional($._semicolon)),

    _Expr: ($) => choice($.EBinop, $.ETernary, $.EUnop, $._expr_postfix),
    cases: ($) => repeat1($.switch_case),
    switch_case: ($) =>
      prec.dynamic(
        -1,
        seq(
          "case",
          field("patterns", commaSep1($._Expr)),
          optional(seq("if", "(", field("guard", $._Expr), ")")),
          ":",
          field("body", repeat(seq($._Expr, optional($._semicolon)))),
        ),
      ),
    switch_default: ($) =>
      prec.right(
        1,
        seq(
          choice("default", seq("case", alias($.wildcard_pattern, ""))),
          ":",
          field("body", repeat(seq($._Expr, optional($._semicolon)))),
        ),
      ),
    _type_decl: ($) =>
      seq(
        field("meta", repeat($.MetaDataEntry)),
        choice($.AbstractType, $.ClassType, $.DefType, $.EnumType),
      ),

    escape_sequence: () => token.immediate(seq("\\", /./)),
    interpolation: ($) =>
      seq(
        "$",
        choice(
          seq(token.immediate("{"), $._Expr, "}"),
          alias(token.immediate(/[a-zA-Z_][a-zA-Z0-9_]*/), $.identifier),
        ),
      ),

    true: (_) => "true",
    false: (_) => "false",
    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    package_name: (_) => /[a-z_][a-zA-Z0-9_]*/,
    type_name: (_) => /[A-Z][a-zA-Z0-9_]*/,

    wildcard_pattern: (_) => "_",
    _semicolon: (_) => ";",

    conditional: ($) =>
      prec.right(
        PREC.CONDITIONAL,
        seq(
          "#if",
          $.compile_condition,
          repeat($._conditional_body),
          repeat($.conditional_elseif),
          optional($.conditional_else),
          $.conditional_end,
        ),
      ),
    compile_condition: ($) =>
      choice(
        $.identifier,
        alias("macro", $.identifier),
        $.Int,
        $.Float,
        $.String,
        seq("(", $.compile_condition, ")"),
        prec.left(7, seq($.compile_condition, ".", $.identifier)),
        prec.right(6, seq("!", $.compile_condition)),
        prec.left(
          5,
          seq($.compile_condition, choice("*", "/", "%"), $.compile_condition),
        ),
        prec.left(
          4,
          seq($.compile_condition, choice("+", "-"), $.compile_condition),
        ),
        prec.left(
          3,
          seq(
            $.compile_condition,
            choice(">", ">=", "<", "<=", "==", "!="),
            $.compile_condition,
          ),
        ),
        prec.left(2, seq($.compile_condition, "&&", $.compile_condition)),
        prec.left(1, seq($.compile_condition, "||", $.compile_condition)),
      ),
    _conditional_body: ($) =>
      choice(
        // ISSUE: adding everything sucks
        $.import,
        $.using,
        $._class_field,
        $._expr_statement,
        $._type_decl,
        $.visibility,
        $.conditional_error,
        repeat1($.MetaDataEntry),
      ),
    conditional_elseif: ($) =>
      seq("#elseif", $.compile_condition, repeat($._conditional_body)),
    conditional_else: ($) => seq("#else", repeat($._conditional_body)),
    conditional_end: (_) => "#end",
  },
});
